Fixed landing page z-index

--- a/src/LandingPage/LandingPage.scss
+++ b/src/LandingPage/LandingPage.scss
@@ -4,6 +4,7 @@
     height: 100vh;
     width: 100%;
     position: relative;
+    z-index: 5;
 
     .icon-title {
         position: absolute;
